--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@netlify/functions": "^3.0.0",
     "jsurl2": "^2.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -27,7 +28,7 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "tailwindcss": "^4.0.0",
-    "typescript": "~5.6.2",
+    "typescript": "^4.9.5",
     "typescript-eslint": "^8.18.2",
     "vite": "^6.0.5"
   },
